# tracecore-openai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agent-bench.toml  pyproject.toml
.agent_bench/: session.json
.agent_bench/baselines/dd4bf510dc864cd688725fafbd0d802c/: integrity.sha256  manifest.json  tool_calls.jsonl  validator.json
agents/: chat_assistant_agent.py  support_triage_agent.py
deliverables/verification/: latest.json
docs/: cli_workflow.md  repo_scope.md
tests/: test_verify.py
tracecore_openai/: config.py  main.py  tracecore_tasks.py  verify.py
tracecore_openai/apps/: chat_assistant.py  support_triage.py
tracecore_openai/evals/scenarios/: chat_assistant.json  support_triage.json
tracecore_openai/shared/: openai_agents_runtime.py
tracecore_openai/tasks/chat_assistant_example/: task.toml
tracecore_openai/tasks/support_triage_example/: task.toml  validate.py
tracecore_openai/templates/: index.html
tracecore_openai/tracecore_tasks/chat_assistant_example/: actions.py  validate.py
tracecore_openai/tracecore_tasks/support_triage_example/: actions.py  setup.py
